cargo-features = ["edition2021"]
[package]
name = "zac"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prettytable-rs = { version= "*", default-features = false }
peg = "*"
anyhow = "*"
itertools = "*"
dyn-clone = "*"
dyn_partial_eq = "*"
