cargo-features = ["edition2021"]
[package]
name = "zac"
version = "0.1.0"
edition = "2021"
description = "Interactive scripting language where you can edit the comments"
license = "Free"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prettytable-rs = { version= "*", default-features = false }
peg = "*"
anyhow = "*"
itertools = "*"
dyn-clone = "*"
dyn_partial_eq = "*"
